internal/chart/testdata/charts/dashboard-traefik-cluster-issuer-shipa.yaml
---
# Source: dashboard/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dashboard-web-3
    shipa.io/app-name: dashboard
    shipa.io/app-process: web
    shipa.io/app-deployment-version: "3"
    shipa.io/is-isolated-run: "false"
  name: dashboard-web-3
spec:
  type: ClusterIP
  ports:
    - name: http-default-1
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    shipa.io/app-name: dashboard
    shipa.io/app-process: web
    shipa.io/app-deployment-version: "3"
    shipa.io/is-isolated-run: "false"
---
# Source: dashboard/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dashboard-worker-3
    shipa.io/app-name: dashboard
    shipa.io/app-process: worker
    shipa.io/app-deployment-version: "3"
    shipa.io/is-isolated-run: "false"
  name: dashboard-worker-3
spec:
  type: ClusterIP
  ports:
    - name: http-default-1
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    shipa.io/app-name: dashboard
    shipa.io/app-process: worker
    shipa.io/app-deployment-version: "3"
    shipa.io/is-isolated-run: "false"
---
# Source: dashboard/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dashboard-web-4
    shipa.io/app-name: dashboard
    shipa.io/app-process: web
    shipa.io/app-deployment-version: "4"
    shipa.io/is-isolated-run: "false"
  name: dashboard-web-4
spec:
  type: ClusterIP
  ports:
    - name: http-default-1
      port: 9091
      protocol: TCP
      targetPort: 9091
  selector:
    shipa.io/app-name: dashboard
    shipa.io/app-process: web
    shipa.io/app-deployment-version: "4"
    shipa.io/is-isolated-run: "false"
---
# Source: dashboard/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dashboard-worker-4
    shipa.io/app-name: dashboard
    shipa.io/app-process: worker
    shipa.io/app-deployment-version: "4"
    shipa.io/is-isolated-run: "false"
  name: dashboard-worker-4
spec:
  type: ClusterIP
  ports:
    - name: http-default-1
      port: 9091
      protocol: TCP
      targetPort: 9091
  selector:
    shipa.io/app-name: dashboard
    shipa.io/app-process: worker
    shipa.io/app-deployment-version: "4"
    shipa.io/is-isolated-run: "false"
---
# Source: dashboard/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dashboard-web-3
    shipa.io/app-name: dashboard
    shipa.io/app-process: web
    shipa.io/app-process-replicas: "3"
    shipa.io/app-deployment-version: "3"
    shipa.io/is-isolated-run: "false"
  name: dashboard-web-3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dashboard-web-3
      shipa.io/app-name: dashboard
      shipa.io/app-process: web
      shipa.io/app-deployment-version: "3"
      shipa.io/is-isolated-run: "false"
  template:
    metadata:
      labels:
        app: dashboard-web-3
        shipa.io/app-name: dashboard
        shipa.io/app-process: web
        shipa.io/app-deployment-version: "3"
        shipa.io/is-isolated-run: "false"
    spec:
      containers:
        - name: dashboard-web-3
          command: ["python"]
          image: shipasoftware/go-app:v1
          ports:
          - containerPort: 9090
          volumeMounts:
            - mountPath: /test-ebs
              name: test-volume
          resources:
            limits:
              cpu: 5Gi
              memory: 5300m
            requests:
              cpu: 5Gi
              memory: 5300m
      imagePullSecrets:
            - name: registry-secret
            - name: private-registry-secret
      volumes:
            - awsElasticBlockStore:
                fsType: ext4
                volumeID: volume-id
              name: test-volume
---
# Source: dashboard/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dashboard-worker-3
    shipa.io/app-name: dashboard
    shipa.io/app-process: worker
    shipa.io/app-process-replicas: "1"
    shipa.io/app-deployment-version: "3"
    shipa.io/is-isolated-run: "false"
  name: dashboard-worker-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-worker-3
      shipa.io/app-name: dashboard
      shipa.io/app-process: worker
      shipa.io/app-deployment-version: "3"
      shipa.io/is-isolated-run: "false"
  template:
    metadata:
      labels:
        app: dashboard-worker-3
        shipa.io/app-name: dashboard
        shipa.io/app-process: worker
        shipa.io/app-deployment-version: "3"
        shipa.io/is-isolated-run: "false"
    spec:
      containers:
        - name: dashboard-worker-3
          command: ["celery"]
          image: shipasoftware/go-app:v1
          ports:
          - containerPort: 9090
      imagePullSecrets:
            - name: registry-secret
            - name: private-registry-secret
---
# Source: dashboard/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dashboard-web-4
    shipa.io/app-name: dashboard
    shipa.io/app-process: web
    shipa.io/app-process-replicas: "3"
    shipa.io/app-deployment-version: "4"
    shipa.io/is-isolated-run: "false"
  name: dashboard-web-4
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dashboard-web-4
      shipa.io/app-name: dashboard
      shipa.io/app-process: web
      shipa.io/app-deployment-version: "4"
      shipa.io/is-isolated-run: "false"
  template:
    metadata:
      labels:
        app: dashboard-web-4
        shipa.io/app-name: dashboard
        shipa.io/app-process: web
        shipa.io/app-deployment-version: "4"
        shipa.io/is-isolated-run: "false"
    spec:
      containers:
        - name: dashboard-web-4
          command: ["python"]
          image: shipasoftware/go-app:v2
          ports:
          - containerPort: 9091
      imagePullSecrets:
            - name: default-image-pull-secret
---
# Source: dashboard/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dashboard-worker-4
    shipa.io/app-name: dashboard
    shipa.io/app-process: worker
    shipa.io/app-process-replicas: "1"
    shipa.io/app-deployment-version: "4"
    shipa.io/is-isolated-run: "false"
  name: dashboard-worker-4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-worker-4
      shipa.io/app-name: dashboard
      shipa.io/app-process: worker
      shipa.io/app-deployment-version: "4"
      shipa.io/is-isolated-run: "false"
  template:
    metadata:
      labels:
        app: dashboard-worker-4
        shipa.io/app-name: dashboard
        shipa.io/app-process: worker
        shipa.io/app-deployment-version: "4"
        shipa.io/is-isolated-run: "false"
    spec:
      containers:
        - name: dashboard-worker-4
          command: ["celery"]
          image: shipasoftware/go-app:v2
          ports:
          - containerPort: 9091
      imagePullSecrets:
            - name: default-image-pull-secret
---
# Source: dashboard/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-http-ingressroute
  annotations:
    kubernetes.io/ingress.class: ingress-class
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    shipa.io/app-name: dashboard
spec:
  entryPoints:
    - web
  routes:
  - match: Host("dashboard.10.10.10.10.shipa.cloud")
    kind: Rule
    services:
    - name: dashboard-web-3
      port: 9090
      weight: 30
    - name: dashboard-web-4
      port: 9091
      weight: 70
---
# Source: dashboard/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-https-ingressroute
  annotations:
    kubernetes.io/ingress.class: ingress-class
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    shipa.io/app-name: dashboard
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host("theketch.io")
    kind: Rule
    services:
    - name: dashboard-web-3
      port: 9090
      weight: 30
    - name: dashboard-web-4
      port: 9091
      weight: 70
  - match: Host("app.theketch.io")
    kind: Rule
    services:
    - name: dashboard-web-3
      port: 9090
      weight: 30
    - name: dashboard-web-4
      port: 9091
      weight: 70
  tls:
    secretName: dashboard-cname-7698da46d42bea3603f2
    secretName: dashboard-cname-1aacb41a573151295624
